--- a/index.html
+++ b/index.html
@@ -14,9 +14,49 @@
 </head>
 <body>
 
-<div class="container">
 
-  
+
+<div class="container">
+      <div class="form-wrapper">
+            <header>
+                  <h1>Create Account</h1>
+            </header>
+            <form action="" class="form" id="form">
+
+                <div class="form-control">
+                      <label for="username">Username</label>
+                      <input type="name" id="username" placeholder="frankjr212711">
+                      <i class="fa fa-check-circle"></i>
+                      <i class="fa fa-exclamation-circle"></i>
+                      <small>Error Message</small>
+                </div>
+
+                <div class="form-control">
+                      <label for="email">Email</label>
+                      <input type="email" id="email" placeholder="a@gmail.com">
+                      <i class="fa fa-check-circle"></i>
+                      <i class="fa fa-exclamation-circle"></i>
+                      <small>Error Message</small>
+                </div>
+                <div class="form-control">
+                      <label for="password">Password</label>                        
+                      <input type="password" id="password" placeholder="password">
+                      <i class="fa fa-check-circle"></i>
+                      <i class="fa fa-exclamation-circle"></i>
+                      <small>Error Message</small>
+                </div>
+                <div class="form-control">
+                      <label for="password-check">Password check</label>                        
+                      <input type="password" id="password-check" placeholder="password">
+                            <i class="fa fa-check-circle"></i>
+                            <i class="fa fa-exclamation-circle"></i>
+                      <small>Error Message</small>
+                </div>
+                            <button id="submit">Submit</button>
+
+        </form>
+      </div>
+<!-- end of container -->
 </div>
 
 
