--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>arrMethods</title>
+      <title>formVal</title>
 
       <link rel="stylesheet" href="styles.css">
       <link rel="stylesheet" href="reset.css">
@@ -31,7 +31,7 @@
                       <small>Error Message</small>
                 </div>
 
-                <div class="form-control">
+                <div class="form-control ">
                       <label for="email">Email</label>
                       <input type="email" id="email" placeholder="a@gmail.com">
                       <i class="fa fa-check-circle"></i>
@@ -50,6 +50,7 @@
                       <input type="password" id="password-check" placeholder="password">
                             <i class="fa fa-check-circle"></i>
                             <i class="fa fa-exclamation-circle"></i>
+                            
                       <small>Error Message</small>
                 </div>
                             <button id="submit">Submit</button>
