--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>formVal</title>
+      <title>Project1</title>
 
       <link rel="stylesheet" href="styles.css">
       <link rel="stylesheet" href="reset.css">
@@ -17,47 +17,69 @@
 
 
 <div class="container">
-      <div class="form-wrapper">
-            <header>
-                  <h1>Create Account</h1>
-            </header>
-            <form action="" class="form" id="form">
+      <!-- panels -->
+      <section class="panels">
+            <div class="panels-content">
+                  <div class="panel panel1" id="panel1">Why</div>
+                  <div class="panel panel2">Do</div>
+                  <div class="panel panel3">Fools</div>
+                  <div class="panel panel4">Fall</div>
+                  <div class="panel panel5">In</div>
+                  <div class="panel panel6">Love</div>
+            </div>
+      </section>
 
-                <div class="form-control">
-                      <label for="username">Username</label>
-                      <input type="name" id="username" placeholder="frankjr212711">
-                      <i class="fa fa-check-circle"></i>
-                      <i class="fa fa-exclamation-circle"></i>
-                      <small>Error Message</small>
-                </div>
 
-                <div class="form-control ">
-                      <label for="email">Email</label>
-                      <input type="email" id="email" placeholder="a@gmail.com">
-                      <i class="fa fa-check-circle"></i>
-                      <i class="fa fa-exclamation-circle"></i>
-                      <small>Error Message</small>
-                </div>
-                <div class="form-control">
-                      <label for="password">Password</label>                        
-                      <input type="password" id="password" placeholder="password">
-                      <i class="fa fa-check-circle"></i>
-                      <i class="fa fa-exclamation-circle"></i>
-                      <small>Error Message</small>
-                </div>
-                <div class="form-control">
-                      <label for="password-check">Password check</label>                        
-                      <input type="password" id="password-check" placeholder="password">
-                            <i class="fa fa-check-circle"></i>
-                            <i class="fa fa-exclamation-circle"></i>
-                            
-                      <small>Error Message</small>
-                </div>
-                            <button id="submit">Submit</button>
+      <!-- checkbox -->
+      <section class="checkbox">
+            <div class="checkbox-content">
+                  <!-- close btn -->
+                  <input type="checkbox" id="close">
+                  <!-- <label for="close" id="closeBtn"></label> -->
 
-        </form>
-      </div>
-<!-- end of container -->
+                  <div class="item">
+                        <input type="checkbox">
+                        <p>This is an inbox layout.</p>
+                  </div>
+                  <div class="item">
+                        <input type="checkbox">
+                        <p>Check one item</p>
+                  </div>
+                  <div class="item">
+                        <input type="checkbox">
+                        <p>Hold down your Shift key</p>
+                  </div>
+                  <div class="item">
+                        <input type="checkbox">
+                        <p>Check a lower item</p>
+                  </div>
+                  <div class="item">
+                        <input type="checkbox">
+                        <p>This is an inbox layout.</p>
+                  </div>
+                  <div class="item">
+                        <input type="checkbox">
+                        <p>Everything inBetween should also be set to checked</p>
+                  </div>
+                  <div class="item">
+                        <input type="checkbox">
+                        <p>Try to do it without any libraries</p>
+                  </div>
+                  <div class="item">
+                        <input type="checkbox">
+                        <p>Just regular JavaScript</p>
+                  </div>
+                  <div class="item">
+                        <input type="checkbox">
+                        <p>Good Luck!</p>
+                  </div>
+                  <div class="item">
+                        <input type="checkbox">
+                        <p>Don't forget to tweet your result!</p>
+                  </div>
+            </div>
+      </section>
+
 </div>
 
 
