--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
       <!-- panels -->
       <section class="panels">
             <div class="panels-content">
+                  <!-- close -->
+                  <input type="checkbox" class="close" id="close">
+            
+
                   <div class="panel panel1" id="panel1">Why</div>
                   <div class="panel panel2">Do</div>
                   <div class="panel panel3">Fools</div>
@@ -34,7 +38,7 @@
       <section class="checkbox">
             <div class="checkbox-content">
                   <!-- close btn -->
-                  <input type="checkbox" id="close">
+                  <input type="checkbox" class="close" >
                   <!-- <label for="close" id="closeBtn"></label> -->
 
                   <div class="item">
